InterpreterSimple/Analizador.java
/* Analizador.java */
/* Generated By:JavaCC: Do not edit this line. Analizador.java */
import java.io.*;
import java.util.Scanner;

class Analizador implements AnalizadorConstants {
        //Menu del sistema
        static Scanner scanner = new Scanner(System.in);
    static int select = -1;

    public static boolean modeTableOn=false;
    public static boolean modeTokenOn=false;

        public static String Code="";
        public static String TokenElem="";
        public static String TablaDeAsignaciones="";
        public static void main( String[] args )throws ParseException, Exception
        {
                try
                {
                        Analizador analizador = new Analizador( System.in ) ;
                        analizador.Config();
                        if(modeTableOn)
                        {
                                System.out.println("\u005ctTabla asignaciones:\u005cn");
                                System.out.println(TokenAsignaciones.tabla.toString());
                        }
                        else if(modeTokenOn)
                        {
                                System.out.println("\u005ctTokens con cada una de las keys:\u005cn");
                                System.out.println(TokenAsignaciones.tabla.toString());
                        }

                System.out.println("\u005cn-------------------------------------------\u005cn\u005ctResultado:\u005cn"+Code+"\u005cn-----------------------------------------\u005cn");
                        System.out.println();
                try{
                  PrintWriter writer = new PrintWriter("test.java", "UTF-8");
                  writer.println(Code);
                  writer.close();
              } catch (IOException e) {
                 // do something
              }

                        System.out.println("\u005ctAnalizador ha terminado.");
                }
                catch(Exception e)
                {
                        System.out.println(e.getMessage());
                        System.out.println("\u005ctAnalizador ha terminado.");
                }

        }

  static final public void Config() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CONFIGTOKENS:{
      jj_consume_token(CONFIGTOKENS);
      Programa();
      break;
      }
    case CONFIGTABLA:{
      jj_consume_token(CONFIGTABLA);
      Programa();
      break;
      }
    case PROGRAMA:{
      Programa();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Programa() throws ParseException {//System.out.println("Programa");
        Token identificador;
    jj_consume_token(PROGRAMA);
Code+="\u005cnclass ";
    identificador = jj_consume_token(IDENTIFIER);
Code+=identificador.toString();
    jj_consume_token(DOUBLEPOINT);
Code+="\u005cn{\u005cn";
    Sector();
    jj_consume_token(FIN);
Code+="\u005cn}\u005cn";
    jj_consume_token(0);
  }

  static final public void Sector() throws ParseException {
    if (jj_2_1(2)) {
      VariablesGlobales();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAIN:{
        Principal();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void VariablesGlobales() throws ParseException {Token identificador;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PRIVATE:{
      jj_consume_token(PRIVATE);
Code+="private ";
      break;
      }
    case PUBLIC:{
      jj_consume_token(PUBLIC);
Code+="public ";
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      jj_consume_token(INT);
Code+="int ";
      break;
      }
    case DEC:{
      jj_consume_token(DEC);
Code+="float ";
      break;
      }
    case STR:{
      jj_consume_token(STR);
Code+="String ";
      break;
      }
    case CHR:{
      jj_consume_token(CHR);
Code+="char ";
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    identificador = jj_consume_token(IDENTIFIER);
Code+=identificador.toString();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_1;
      }
      jj_consume_token(COMMA);
Code+=",";
      jj_consume_token(IDENTIFIER);
Code+="identGeneric";
    }
    jj_consume_token(SEMICOLON);
Code+=";\u005cn";
    Sector();
  }

  static final public void Principal() throws ParseException {TokenAsignaciones.SetTables();
    jj_consume_token(MAIN);
Code+="public static void main( String[] args )";
    jj_consume_token(DOUBLEPOINT);
Code+="\u005cn{\u005cn";
    Sentencias();
    jj_consume_token(FIN);
Code+="\u005cn}\u005cn";
  }

  static final public void VariablesLocales() throws ParseException {int td;
        Token var;
    TiposDatos();
td = token.kind;
    var = jj_consume_token(IDENTIFIER);
TokenAsignaciones.InsertarSimbolo(var, td);
                {Code+=var.toString();}
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASIGNACION:{
      VariablesAsignacion(var);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
Code+=",";
      var = jj_consume_token(IDENTIFIER);
TokenAsignaciones.InsertarSimbolo(var, td);
                        Code+="id";
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ASIGNACION:{
        VariablesAsignacion(var);
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    }
    jj_consume_token(SEMICOLON);
Code+=";\u005cn";
    VS();
  }

  static final public void VariablesAsignacion(Token v1) throws ParseException {Token v2;
        Token v3;
        String res;
        boolean imp = false;
    jj_consume_token(ASIGNACION);
Code+="=";
    TiposAsignaciones();
v2 = token;
                res = TokenAsignaciones.checkAsing(v1, v2);

                if(res != " ")
                {
                        //System.out.println(res);
                        imp = true;
                }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:
      case MULTIPLY:
      case DIVIDE:
      case NUMBER:
      case IDENTIFIER:
      case DECIMAL:
      case CADENA:
      case CARAC:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_3;
      }
      OpAritmetico();
      TiposAsignaciones();
v3 = token;
                res = TokenAsignaciones.checkAsing(v1, v3);

                if(res != " " && !imp)
                {
                        //System.out.println(res);
                }
    }
  }

  static final public void VS() throws ParseException {
    if (jj_2_2(3)) {
      VariablesLocales();
    } else {
      Sentencias();
    }
  }

  static final public void Sentencias() throws ParseException {
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case FOR:
      case SWITCH:
      case DO:
      case WHILE:
      case WRITE:
      case READ:
      case INT:
      case DEC:
      case CHR:
      case STR:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case DEC:
      case CHR:
      case STR:{
        VariablesLocales();
        break;
        }
      case IF:{
        SentenciaIf();
        break;
        }
      case FOR:{
        SentenciaFor();
        break;
        }
      case DO:
      case WHILE:{
        SentenciaDo();
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        if (jj_2_3(2)) {
          SentenciaAsignacion();
          jj_consume_token(SEMICOLON);
TokenAsignaciones.segunda = 0;Code+=";\u005cn";
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case WRITE:{
            SentenciaWrite();
            break;
            }
          case READ:{
            SentenciaRead();
            jj_consume_token(SEMICOLON);
Code+=";\u005cn";
            break;
            }
          case SWITCH:{
            SentenciaSwitch();
            break;
            }
          default:
            jj_la1[11] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
  }

//Sentencia IF
  static final public void SentenciaIf() throws ParseException {
    jj_consume_token(IF);
Code+="if(";
    ComparacionesAnidadas();
    jj_consume_token(DOUBLEPOINT);
Code+=")\u005cn\u005ct{\u005cn";
    Sentencias();
    jj_consume_token(FIN);
Code+="\u005cn}\u005cn";
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELSE:
      case ELSEIF:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_5;
      }
      Sino();
    }
  }

  static final public void Sino() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
Code+="else";
      jj_consume_token(DOUBLEPOINT);
Code+="\u005cn{\u005cn";
      Sentencias();
      jj_consume_token(FIN);
Code+="\u005cn}\u005cn";
      break;
      }
    case ELSEIF:{
      jj_consume_token(ELSEIF);
Code+="else";Code+=" ";Code+="if(";
      ComparacionesAnidadas();
      jj_consume_token(DOUBLEPOINT);
Code+=")\u005cn{\u005cn";
      Sentencias();
      jj_consume_token(FIN);
Code+="}";
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ComparacionesAnidadas() throws ParseException {
    Comparaciones();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:
      case AND:
      case NUMBER:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:
      case AND:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case AND:{
          jj_consume_token(AND);
Code+="&&";
          break;
          }
        case OR:{
          jj_consume_token(OR);
Code+="||";
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      Comparaciones();
    }
  }

  static final public void Comparaciones() throws ParseException {
    Valor();
    Operadores();
    Valor();
  }

  static final public void Valor() throws ParseException {Token identificador;
    if (jj_2_4(2)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        identificador = jj_consume_token(IDENTIFIER);
Code+=identificador.toString();
        break;
        }
      case NUMBER:{
        identificador = jj_consume_token(NUMBER);
Code+=identificador.toString();
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBER:
      case IDENTIFIER:{
        Expresion();
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void Expresion() throws ParseException {Token identificador;
    if (jj_2_5(2)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBER:{
        identificador = jj_consume_token(NUMBER);
Code+=identificador.toString();
        break;
        }
      case IDENTIFIER:{
        identificador = jj_consume_token(IDENTIFIER);
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
Code+=identificador.toString();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBER:
      case IDENTIFIER:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
          identificador = jj_consume_token(IDENTIFIER);
Code+=identificador.toString();
          break;
          }
        case NUMBER:{
          identificador = jj_consume_token(NUMBER);
Code+=identificador.toString();
          break;
          }
        default:
          jj_la1[20] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        OpAritmetico();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
          identificador = jj_consume_token(IDENTIFIER);
Code+=identificador.toString();
          break;
          }
        case NUMBER:{
          identificador = jj_consume_token(NUMBER);
Code+=identificador.toString();
          break;
          }
        default:
          jj_la1[21] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void Operadores() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EQ:{
      jj_consume_token(EQ);
Code+="==";
      break;
      }
    case LE:{
      jj_consume_token(LE);
Code+="<=";
      break;
      }
    case GE:{
      jj_consume_token(GE);
Code+="<";
      break;
      }
    case NE:{
      jj_consume_token(NE);
Code+="!=";
      break;
      }
    case GR:{
      jj_consume_token(GR);
Code+=">";
      break;
      }
    case MN:{
      jj_consume_token(MN);
Code+=">=";
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public int OpAritmetico() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:{
      jj_consume_token(PLUS);
Code+="+";{if ("" != null) return 1;}
      break;
      }
    case MINUS:{
      jj_consume_token(MINUS);
Code+="-";{if ("" != null) return 1;}
      break;
      }
    case MULTIPLY:{
      jj_consume_token(MULTIPLY);
Code+="*";{if ("" != null) return 1;}
      break;
      }
    case DIVIDE:{
      jj_consume_token(DIVIDE);
Code+="/";{if ("" != null) return 1;}
      break;
      }
    default:
      jj_la1[24] = jj_gen;
{if ("" != null) return 0;}
{if ("" != null) return 0;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public void TiposDatos() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      jj_consume_token(INT);
Code+="int ";
      break;
      }
    case DEC:{
      jj_consume_token(DEC);
Code+="float ";
      break;
      }
    case STR:{
      jj_consume_token(STR);
Code+="String ";
      break;
      }
    case CHR:{
      jj_consume_token(CHR);
Code+="char ";
      break;
      }
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//Sentencia FOR
  static final public void SentenciaFor() throws ParseException {
    jj_consume_token(FOR);
Code+="for(";
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case DEC:
    case CHR:
    case STR:{
      DeclaracionUnaVariable();
      break;
      }
    case IDENTIFIER:{
      SentenciaAsignacion();
      break;
      }
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(SEMICOLON);
Code+=";";
    Comparaciones();
    jj_consume_token(SEMICOLON);
Code+=";";
    SentenciaAsignacion();
    jj_consume_token(DOUBLEPOINT);
Code+=")\u005cn{\u005cn";
    Sentencias();
    jj_consume_token(FIN);
Code+="}";
  }

  static final public void DeclaracionUnaVariable() throws ParseException {int td;
        Token var;
    TiposDatos();
td = token.kind;
    var = jj_consume_token(IDENTIFIER);
TokenAsignaciones.InsertarSimbolo(var, td);
                System.out.print(var.toString());
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASIGNACION:{
      VariablesAsignacion(var);
      break;
      }
    default:
      jj_la1[27] = jj_gen;
      ;
    }
  }

  static final public void SentenciaDo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DO:{
      jj_consume_token(DO);
Code+="do";
      jj_consume_token(DOUBLEPOINT);
Code+="\u005cn{\u005cn";
      Sentencias();
      jj_consume_token(FIN);
Code+="\u005cn}\u005cn";
      jj_consume_token(WHILE);
Code+="\u005cnwhile(";
      Comparaciones();
      jj_consume_token(FIN);
Code+=")\u005cn";
      break;
      }
    case WHILE:{
      SentenciaWhile();
      break;
      }
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SentenciaWhile() throws ParseException {
    jj_consume_token(WHILE);
Code+="while(";
    Comparaciones();
    jj_consume_token(DOUBLEPOINT);
Code+=")\u005cn{\u005cn";
    Sentencias();
    jj_consume_token(FIN);
Code+="\u005cn}\u005cn";
  }

  static final public void SentenciaAsignacion() throws ParseException {Token v1;
        Token v2;
        Token v3;
        int aux;
        String res;
        boolean imp = false;
    v1 = jj_consume_token(IDENTIFIER);
Code+=v1.toString();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASIGNACION:{
      jj_consume_token(ASIGNACION);
Code+="=";
      TiposAsignaciones();
v2 = token;
        res = TokenAsignaciones.checkAsing(v1, v2);
        if(res != " ")
        {
                System.out.println(res);
                imp = true;
        }
      label_7:
      while (true) {
        if (jj_2_6(2)) {
          ;
        } else {
          break label_7;
        }
        OpAritmetico();
        TiposAsignaciones();
v3 = token;
        res = TokenAsignaciones.checkAsing(v1, v3);

        if(res != " " && !imp)
        {
                System.out.println(res);
        }
      }
      break;
      }
    case INCR:
    case DECR:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INCR:{
        jj_consume_token(INCR);
Code+="++";
        break;
        }
      case DECR:{
        jj_consume_token(DECR);
Code+="--";
        break;
        }
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
res = TokenAsignaciones.checkVariable(v1);

        if(res != " ")
                System.out.println(res);
      break;
      }
    default:
      jj_la1[30] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void TiposAsignaciones() throws ParseException {Token elem;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFIER:{
      elem = jj_consume_token(IDENTIFIER);
Code+=elem.toString();
      break;
      }
    case NUMBER:{
      elem = jj_consume_token(NUMBER);
Code+=elem.toString();
      break;
      }
    case DECIMAL:{
      elem = jj_consume_token(DECIMAL);
Code+=elem.toString();
      break;
      }
    case CADENA:{
      elem = jj_consume_token(CADENA);
Code+=elem.toString();
      break;
      }
    case CARAC:{
      elem = jj_consume_token(CARAC);
Code+=elem.toString();
      break;
      }
    default:
      jj_la1[31] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//Sentencia WRITE
  static final public void SentenciaWrite() throws ParseException {
    jj_consume_token(WRITE);
Code+="System.out.println(";
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBER:
      case IDENTIFIER:
      case CADENA:{
        ;
        break;
        }
      default:
        jj_la1[32] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBER:
      case IDENTIFIER:{
        Expresion();
        label_9:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case PLUS:{
            ;
            break;
            }
          default:
            jj_la1[33] = jj_gen;
            break label_9;
          }
          jj_consume_token(PLUS);
          jj_consume_token(CADENA);
        }
        break;
        }
      case CADENA:{
        jj_consume_token(CADENA);
        label_10:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case PLUS:{
            ;
            break;
            }
          default:
            jj_la1[34] = jj_gen;
            break label_10;
          }
          jj_consume_token(PLUS);
          Expresion();
        }
        break;
        }
      default:
        jj_la1[35] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(SEMICOLON);
Code+=");";
  }

//Sentencia READ
  static final public void SentenciaRead() throws ParseException {
    jj_consume_token(READ);
    jj_consume_token(LPAREN);
    jj_consume_token(RPAREN);
  }
